<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Musique</string>

    <!-- nav header activity main -->
    <string name="by">Old Geek, juin 2016</string>

    <string name="album">Album</string>

    <string name="albums">Albums</string>

    <string name="unknown_album">Album inconnu</string>

    <string name="album_artwork">Couverture d\'album</string>

    <plurals name="albums_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>

    <string name="titles">Titres</string>
    <string name="title">Titre</string>

    <string name="artists">Artistes</string>
    <string name="unknown_artist">Artiste inconnu</string>
    <string name="artist">Artiste</string>

    <string name="genre">Genre</string>


    <string name="play">Lecture</string>
    <string name="prev">Précédent</string>
    <string name="next">Suivant</string>

    <string name="reorder">Réordonner</string>

    <string name="custom">Custom</string>
    <string name="bass_boost">Amplificateur de basses</string>

    <string name="playlists">Listes de lecture</string>
    <string name="choose_playlist">Choisir une liste</string>
    <string name="new_playlist">Nouvelle liste de lecture</string>
    <string name="playlist_name">Nom de la liste de lecture</string>
    <string name="create_playlist">Créer une liste de lecture</string>
    <string name="action_add_to_playlist">Ajouter à une liste de lecture</string>

    <string name="deletePlaylistConfirm">Supprimer cette liste de lecture ?</string>
    <string name="deleteTrackConfirm">Supprimer ce titre ?</string>


    <string name="view_queue">Voir la file de lecture</string>
    <string name="action_add_to_queue">Ajouter à la file de lecture</string>

    <string name="context_menu_description">Menu contextuel</string>

    <string name="equalizer">Égaliseur</string>
    <string name="action_equalizer">Égaliseur</string>

    <string name="search">Rechercher</string>
    <string name="edit_tags">Editer données</string>
    <string name="action_edit_tags">Editer données</string>
    <string name="track_number">Numéro de piste</string>
    <string name="tags_edition_failed">L\'édition des données a échoué</string>
    <string name="year">Année</string>
    <string name="action_search">Recherche</string>
    <string name="no_results">Aucun résultat</string>

    <string name="now_playing">Lecture en cours</string>
    <string name="delete">supprimer</string>


    <string name="permission">Permission</string>
    <string name="permission_read_external_storage">L\'application doit  pouvoir lire le stockage externe.</string>
    <string name="permission_write_external_storage">L\'application doit pouvoir écrire sur le stockage externe pour sauvegarder les images téléchargées.</string>
    <string name="permission_read_phone_state">Il est recommandé (mais pas nécessaire) de donner la permission "READ_PHONE_STATE" à l\'application. Le lecteur pourrait ainsi se mettre en pause automatiquement lorsque vous recevez un appel.</string>

    <string name="sort_order_entry_az">Ordre alphabétique</string>
    <string name="sort_order_entry_year">Année</string>
    <string name="sort_order_entry_artist">Artiste</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_number_of_songs">Nombre de chansons</string>
    <string name="sort_order_entry_number_of_albums">Nombre d\'albums</string>


    <string name="title_sort_year">année</string>
    <string name="title_sort_artist">artiste</string>
    <string name="title_sort_album">album</string>


    <string name="about">A propos</string>

    <string name="about_message">
        \n
        Musique 1.9.1\n
        \n
        Old Geek, 2016\n
        \n
        Licence: aucune, profitez, partagez.\n
        \n
        \n
        Librairies:\n
        \n
        Jaudiotagger\n
        Java API for audio metatagging. \n
        Lesser General Public License\n
        http://www.gnu.org/copyleft/lesser.html \n
        \n
        \n
        Code source:\n
        \n
        Musique: https://github.com/Old-Geek/Musique\n
        Jaudiotagger: http://www.jthink.net/jaudiotagger\n
        \n
    </string>

    <string name="radio">Radio</string>
    <string name="exit">Quitter</string>

    <!-- Timer -->
    <string name="timer_info" formatted="false" tools:ignore="StringFormatInvalid">%02d:%02d</string>
    <string name="start">démarrer</string>
    <string name="cancel">annuler</string>
    <string name="continuer">continuer</string>
    <string name="cancel_timer">annuler le timer</string>
    <string name="impossible">0 impossible</string>


    <string name="minute_singulier">minute</string>
    <string name="minute_pluriel">minutes</string>

    <string name="arret">Arrêt dans</string>

    <string name="stop_timer">Timer arrêté</string>

    <string name="action_sleep_timer">Minuteur sommeil</string>

    <!-- File Picker -->
    <string name="filePick">FilePicker</string>
    <string name="filePick_grid">Grille</string>
    <string name="filePick_list">Liste</string>

    <string name="fp__empty_directory">Ce répertoire est vide</string>

    <string name="fp__action_deselect">Désélectionner</string>
    <string name="fp__action_select_all">Tout sélectionner</string>

    <string name="fp__action_invert_selection">Inverser la selection</string>
    <string name="fp__sort">Trier</string>

    <string-array name="fp__sorting_types">
        <item>Par nom, croissant</item>
        <item>Par nom, décroissant</item>
        <item>Par taille, croissant</item>
        <item>Par taille, décroissant</item>
        <item>Par date, croissant</item>
        <item>Par date, décroissant</item>
    </string-array>

    <string-array name="fp__size_units">
        <item>o</item>
        <item>Ko</item>
        <item>Mo</item>
        <item>Go</item>
        <item>To</item>
        <item>Po</item>
    </string-array>

    <!-- update -->

    <string name="update">Mise à jour</string>

    <string name="appupdater_update_available">Nouvelle mise à jour disponible</string>

    <string name="appupdater_update_available_description_dialog">La mise à jour %1$s est disponible. En téléchargeant cette version de l\'application, vous aurez accès aux dernières fonctionnalités et améliorations de %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">La mise à jour %1$s est disponible.\n\nNOUVEAUTÉS:\n%2$s</string>
    <string name="appupdater_update_available_description_snackbar">Mise à jour %1$s disponible.</string>
    <string name="appupdater_update_not_available">Aucune mise à jour disponible</string>
    <string name="appupdater_update_not_available_description">Vous avez la dernière version disponible de %s.</string>
    <string name="appupdater_btn_update">Télécharger</string>
    <string name="appupdater_btn_dismiss">Plus tard</string>

</resources>