<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding"
    tools:context=".dialog.AlbumEditorDialog">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

        <requestFocus />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/big_content_padding">

        <EditText
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/big_content_padding">

        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        card_view:elevation="1dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/album_artwork"
            android:scaleType="centerCrop" />

    </android.support.v7.widget.CardView>

</LinearLayout>
