<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dialogPadding"
    android:paddingBottom="@dimen/dialogPadding"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:mContext=".dialog.SongEditorDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_audiotrack_grey_600_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:ems="15"
                android:inputType="text" />

            <requestFocus />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic_grey_600_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/artist"
                android:ems="15"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_library_music_grey_600_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album"
                android:ems="15"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_genre"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
                android:ems="15"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list_grey_600_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/track_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="N°"
                android:ems="3"
                android:inputType="number"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


</LinearLayout>
